updated EntityDamageByEntityEventConstructor to work on 1.21.1